updated 3D reconstruction code to handle dropouts. Need to debug still

--- a/Limblab_DLC/3D reconstruction.ipynb
+++ b/Limblab_DLC/3D reconstruction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "\"\"\"\n",
     "import sys\n",
     "\n",
-    "# add calibration_folder to path so that those functions can be used\n",
+    "# add folder with calibration functions to path\n",
     "calib_folder = r'D:\\Lab\\GIT\\proc-joe\\Limblab_DLC\\cam_calib_20200508'\n",
     "\n",
     "# set project folder \n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,8 +59,12 @@
     "parsed_toml = toml.load(calib_folder + r'\\config_master.toml')\n",
     "\n",
     "# upate calib video path and prefix and extension\n",
-    "parsed_toml['calibration']['calib_video_path'] = r'D:\\Lab\\Data\\DLC_videos\\Han_20201204_rwFreeReach\\Han_reaching-Joe-2020-12-10\\videos\\calib'\n",
+    "parsed_toml['calibration']['calib_video_path'] = project_folder + r'\\videos\\calib'\n",
     "parsed_toml['calibration']['calib_video_prefix'] = 'Han_20201204_0000'\n",
+    "\n",
+    "# set number of camers\n",
+    "n_cams = 4\n",
+    "\n",
     "\n",
     "# update paths to 2d data while removing (or keeping) videos with filtered\n",
     "if(use_filtered_data):\n",
@@ -128,7 +132,11 @@
     "\n",
     "#%% If you already ran calibration you don't need to run these.\n",
     "calibrate_intrinsic(config)\n",
+    "# calibrate intrinsic runs for each camera, so we can run it on the full video list\n",
     "\n",
+    "\n",
+    "\n",
+    "# calibrate extrinsic\n",
     "calibrate_extrinsic(config)"
    ]
   },
