--- a/Limblab_DLC/Label-videos.ipynb
+++ b/Limblab_DLC/Label-videos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,17 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_20201204_00001_trimmed.avi', 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_20201204_00002_trimmed.avi', 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_20201204_00003_trimmed.avi', 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_20201204_00004_trimmed.avi', 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_20201204_00005_trimmed.avi', 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_20201204_00006_trimmed.avi', 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_20201204_00007_trimmed.avi', 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_20201204_00008_trimmed.avi']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"proj_folder = r'D:\\Lab\\Data\\DLC_videos\\Han_20201204_rwFreeReach'\n",
     "task='Han_reaching'\n",
@@ -41,7 +33,12 @@
     "print(video)\n",
     "config_file = deeplabcut.create_new_project(task,experimenter,video, working_directory=proj_folder,copy_videos=True)\n",
     "deeplabcut.extract_frames(config_file,'automatic',crop=False)\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "# set shrek project folder and local folder (dest_folder)\n",
+    "\n",
+    "shrek_project_folder = '/home/jts3256/DLC_videos/Han_202012-Joe-2020-12-14'\n",
+    "dest_folder = r'D:\\Lab\\Data\\DLC_videos\\Han_20201204_rwFreeReach\\Han_reaching-Joe-2020-12-10'"
    ]
   },
   {
@@ -52,10 +49,6 @@
    "source": [
     "# move folder from Shrek to local computer to label frames on local computer. Set shrek project folder and dest_folder\n",
     "# Also may need to update ssh key/id\n",
-    "\n",
-    "shrek_project_folder = '/home/jts3256/DLC_videos/Handle_tracking-Joe-2020-12-08'\n",
-    "dest_folder = r'D:\\Lab\\Data\\DLC_videos\\handle_labeling'\n",
-    "\n",
     "image_folder = shrek_project_folder + '/labeled-data'\n",
     "config_file = shrek_project_folder + '/config.yaml'\n",
     "\n",
@@ -71,7 +64,7 @@
     "\n",
     "\n",
     "\n",
-    "ssh.connect(hostname = \"165.124.111.57\", username= \"jts3256\", key_filename=pkey_filename)\n",
+    "ssh.connect(hostname = \"FSMS270859X8810459.fsm.northwestern.edu\", username= \"jts3256\", key_filename=pkey_filename)\n",
     "with SCPClient(ssh.get_transport(), sanitize=lambda x: x) as scp:\n",
     "    scp.get(image_folder,recursive = True, local_path=dest_folder)\n",
     "    scp.get(config_file,recursive = False, local_path=dest_folder)\n",
@@ -97,13 +90,13 @@
     "\"\"\"\n",
     "label frames\n",
     "\"\"\"\n",
-    "local_config_path = r'D:\\Lab\\Data\\DLC_videos\\Crackle-Qiwei-2020-12-03\\config.yaml'\n",
+    "local_config_path = r'D:\\Lab\\Data\\DLC_videos\\Han_20201204_rwFreeReach\\Han_reaching-Joe-2020-12-10\\config.yaml'\n",
     "deeplabcut.label_frames(local_config_path,imtypes=['*png'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -118,7 +111,7 @@
     "pkey_filename = r'C:\\Users\\Joseph Sombeck\\shrek_sshkey'\n",
     "ssh.set_missing_host_key_policy(paramiko.AutoAddPolicy())\n",
     "\n",
-    "ssh.connect(hostname = \"165.124.111.57\", username= \"jts3256\", key_filename=pkey_filename)\n",
+    "ssh.connect(hostname = \"FSMS270859X8810459.fsm.northwestern.edu\", username= \"jts3256\", key_filename=pkey_filename)\n",
     "scp  = SCPClient(ssh.get_transport())\n",
     "\n",
     "scp.put(files = dest_folder + '\\labeled-data',recursive = True, \n",
