--- a/Limblab_DLC/trim_video.ipynb
+++ b/Limblab_DLC/trim_video.ipynb
@@ -18,17 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Han_20201204_00001.avi' 'Han_20201204_00002.avi'\n",
-      " 'Han_20201204_00003.avi' 'Han_20201204_00004.avi'\n",
-      " 'Han_20201204_00005.avi' 'Han_20201204_00006.avi'\n",
-      " 'Han_20201204_00007.avi' 'Han_20201204_00008.avi']\n"
+      "['Han_20201204_00001.avi_trimmed.avi']\n"
      ]
     }
    ],
@@ -69,7 +66,7 @@
     "    temp = [frame_start,frame_end]\n",
     "    return np.asarray(temp).T\n",
     "\n",
-    "base_path = 'D:\\Lab\\Data\\DLC_videos\\Han_20201204_rwFreeReach\\\\'\n",
+    "base_path = r'D:\\Lab\\Data\\DLC_videos\\Han_20201204_rwFreeReach\\Han_reaching-Joe-2020-12-10\\videos\\calib\\\\'\n",
     "save_path = base_path\n",
     "info_type = '*.xiinfo'\n",
     "info_file_list = fnmatch.filter(os.listdir( base_path ), info_type)\n",
@@ -79,7 +76,7 @@
     "The next 3 lines will find out all .avi files under a specific path.\n",
     "Typically they are the files from different cameras\n",
     "\"\"\"\n",
-    "video_type = '*.avi'\n",
+    "video_type = '*trimmed.avi'\n",
     "video_file_list = fnmatch.filter(os.listdir( base_path ), video_type)\n",
     "video_file_list = np.sort(video_file_list)\n",
     "\n",
@@ -111,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,12 +116,12 @@
     "Set what time bounds to keep frames. Convert time bounds to frames and store frame numbers\n",
     "\"\"\"\n",
     "#time_bounds = np.array([[0,449],[465,859],[890,986]]) # in seconds\n",
-    "time_bounds = np.array([[0,273],[370,585],[717,742],[799,853],[919,985]]) # in seconds\n"
+    "time_bounds = np.array([[0,1]]) # in seconds\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -132,313 +129,15 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "400\n",
-      "800\n",
-      "1200\n",
-      "1600\n",
-      "2000\n",
-      "2400\n",
-      "2800\n",
-      "3200\n",
-      "3600\n",
-      "4000\n",
-      "4400\n",
-      "4800\n",
-      "5200\n",
-      "5600\n",
-      "6000\n",
-      "6400\n",
-      "6800\n",
-      "7200\n",
-      "7600\n",
-      "8000\n",
-      "8400\n",
-      "8800\n",
-      "9200\n",
-      "9600\n",
-      "10000\n",
-      "10400\n",
-      "10800\n",
-      "11200\n",
-      "11600\n",
-      "12000\n",
-      "12400\n",
-      "12800\n",
-      "13200\n",
-      "13600\n",
-      "14000\n",
-      "14400\n",
-      "14800\n",
-      "15200\n",
-      "15600\n",
-      "16000\n",
-      "16400\n",
-      "16800\n",
-      "17200\n",
-      "17600\n",
-      "18000\n",
-      "18400\n",
-      "18800\n",
-      "19200\n",
-      "19600\n",
-      "20000\n",
-      "20400\n",
-      "20800\n",
-      "21200\n",
-      "21600\n",
-      "22000\n",
-      "22400\n",
-      "22800\n",
-      "23200\n",
-      "23600\n",
-      "24000\n",
-      "24400\n",
-      "24800\n",
-      "25200\n",
-      "25600\n",
-      "26000\n",
-      "26400\n",
-      "26800\n",
-      "27200\n",
-      "27600\n",
-      "28000\n",
-      "28400\n",
-      "28800\n",
-      "29200\n",
-      "end for the No. 0 big file\n",
-      "0\n",
-      "400\n",
-      "800\n",
-      "1200\n",
-      "1600\n",
-      "2000\n",
-      "2400\n",
-      "2800\n",
-      "3200\n",
-      "3600\n",
-      "4000\n",
-      "4400\n",
-      "4800\n",
-      "5200\n",
-      "5600\n",
-      "6000\n",
-      "6400\n",
-      "6800\n",
-      "7200\n",
-      "7600\n",
-      "8000\n",
-      "8400\n",
-      "8800\n",
-      "9200\n",
-      "9600\n",
-      "10000\n",
-      "10400\n",
-      "10800\n",
-      "11200\n",
-      "11600\n",
-      "12000\n",
-      "12400\n",
-      "12800\n",
-      "13200\n",
-      "13600\n",
-      "14000\n",
-      "14400\n",
-      "14800\n",
-      "15200\n",
-      "15600\n",
-      "16000\n",
-      "16400\n",
-      "16800\n",
-      "17200\n",
-      "17600\n",
-      "18000\n",
-      "18400\n",
-      "18800\n",
-      "19200\n",
-      "19600\n",
-      "20000\n",
-      "20400\n",
-      "20800\n",
-      "21200\n",
-      "21600\n",
-      "22000\n",
-      "22400\n",
-      "22800\n",
-      "23200\n",
-      "23600\n",
-      "24000\n",
-      "24400\n",
-      "24800\n",
-      "25200\n",
-      "25600\n",
-      "26000\n",
-      "26400\n",
-      "26800\n",
-      "27200\n",
-      "27600\n",
-      "28000\n",
-      "28400\n",
-      "28800\n",
-      "29200\n",
-      "end for the No. 1 big file\n",
-      "0\n",
-      "400\n",
-      "800\n",
-      "1200\n",
-      "1600\n",
-      "2000\n",
-      "2400\n",
-      "2800\n",
-      "3200\n",
-      "3600\n",
-      "4000\n",
-      "4400\n",
-      "4800\n",
-      "5200\n",
-      "5600\n",
-      "6000\n",
-      "6400\n",
-      "6800\n",
-      "7200\n",
-      "7600\n",
-      "8000\n",
-      "8400\n",
-      "8800\n",
-      "9200\n",
-      "9600\n",
-      "10000\n",
-      "10400\n",
-      "10800\n",
-      "11200\n",
-      "11600\n",
-      "12000\n",
-      "12400\n",
-      "12800\n",
-      "13200\n",
-      "13600\n",
-      "14000\n",
-      "14400\n",
-      "14800\n",
-      "15200\n",
-      "15600\n",
-      "16000\n",
-      "16400\n",
-      "16800\n",
-      "17200\n",
-      "17600\n",
-      "18000\n",
-      "18400\n",
-      "18800\n",
-      "19200\n",
-      "19600\n",
-      "20000\n",
-      "20400\n",
-      "20800\n",
-      "21200\n",
-      "21600\n",
-      "22000\n",
-      "22400\n",
-      "22800\n",
-      "23200\n",
-      "23600\n",
-      "24000\n",
-      "24400\n",
-      "24800\n",
-      "25200\n",
-      "25600\n",
-      "26000\n",
-      "26400\n",
-      "26800\n",
-      "27200\n",
-      "27600\n",
-      "28000\n",
-      "28400\n",
-      "28800\n",
-      "29200\n",
-      "end for the No. 2 big file\n",
-      "0\n",
-      "400\n",
-      "800\n",
-      "1200\n",
-      "1600\n",
-      "2000\n",
-      "2400\n",
-      "2800\n",
-      "3200\n",
-      "3600\n",
-      "4000\n",
-      "4400\n",
-      "4800\n",
-      "5200\n",
-      "5600\n",
-      "6000\n",
-      "6400\n",
-      "6800\n",
-      "7200\n",
-      "7600\n",
-      "8000\n",
-      "8400\n",
-      "8800\n",
-      "9200\n",
-      "9600\n",
-      "10000\n",
-      "10400\n",
-      "10800\n",
-      "11200\n",
-      "11600\n",
-      "12000\n",
-      "12400\n",
-      "12800\n",
-      "13200\n",
-      "13600\n",
-      "14000\n",
-      "14400\n",
-      "14800\n",
-      "15200\n",
-      "15600\n",
-      "16000\n",
-      "16400\n",
-      "16800\n",
-      "17200\n",
-      "17600\n",
-      "18000\n",
-      "18400\n",
-      "18800\n",
-      "19200\n",
-      "19600\n",
-      "20000\n",
-      "20400\n",
-      "20800\n",
-      "21200\n",
-      "21600\n",
-      "22000\n",
-      "22400\n",
-      "22800\n",
-      "23200\n",
-      "23600\n",
-      "24000\n",
-      "24400\n",
-      "24800\n",
-      "25200\n",
-      "25600\n",
-      "26000\n",
-      "26400\n",
-      "26800\n",
-      "27200\n",
-      "27600\n",
-      "28000\n",
-      "28400\n",
-      "28800\n",
-      "29200\n",
-      "end for the No. 3 big file\n"
+      "end for the No. 0 big file\n"
      ]
     }
    ],
    "source": [
-    "video_file_list_idx = [0,1,2,3]\n",
+    "video_file_list_idx = [0]\n",
     "running_list = video_file_list[video_file_list_idx]\n",
     "\n",
-    "add_frame_nums = 0\n",
+    "add_frame_nums = 1\n",
     "appended_text = '_trimmed.avi'\n",
     "\"\"\"\n",
     "Specify the frame rate here. Typical value is 30 frames per second\n",
@@ -460,7 +159,7 @@
     "\n",
     "    save_fps = fps\n",
     "    frame_bounds = time_bounds*fps\n",
-    "    \n",
+    "    frame_bounds = np.array([[-1,150]])\n",
     "    \"\"\"\n",
     "    The main idear here is to let opencv read in individual frames,\n",
     "    process them and then write to a new video file\n",
@@ -478,6 +177,7 @@
     "        if k % 400 == 0:\n",
     "            print(k)\n",
     "        # -- Read one video frame -- #\n",
+    "        cap.set(cv2.CAP_PROP_POS_FRAMES,k-1)\n",
     "        success, frame = cap.read()\n",
     "        writer_no = 0\n",
     "        \n",
@@ -486,8 +186,8 @@
     "            keep_frame = 1\n",
     "        else:\n",
     "            keep_frame = 0\n",
-    "            for i_frame in range(0,frame_bounds.shape[0]):\n",
-    "                if(k >= frame_bounds[i_frame,0] and k <= frame_bounds[i_frame,1]):\n",
+    "            for i_bound in range(0,frame_bounds.shape[0]):\n",
+    "                if(k >= frame_bounds[i_bound,0] and k <= frame_bounds[i_bound,1]):\n",
     "                    keep_frame = 1\n",
     "        \n",
     "        if success and keep_frame:\n",
@@ -499,8 +199,8 @@
     "            ####################################################################\n",
     "            if(add_frame_nums):\n",
     "                cv2.putText(frame, str(k-start_frame+1), (20, 20) ,cv2.FONT_HERSHEY_SIMPLEX ,0.8, color,2)\n",
-    "                t = (ts_list[video_file_list_idx[i]][k] - ts_list[video_file_list_idx[i]][start_frame])/1000000\n",
-    "                cv2.putText(frame, str(round(t, 3)), (120, 20) ,cv2.FONT_HERSHEY_SIMPLEX ,0.8, color,2)\n",
+    "                #t = (ts_list[video_file_list_idx[i]][k] - ts_list[video_file_list_idx[i]][start_frame])/1000000\n",
+    "                #cv2.putText(frame, str(round(t, 3)), (120, 20) ,cv2.FONT_HERSHEY_SIMPLEX ,0.8, color,2)\n",
     "                \n",
     "            # -- Write to the video file -- #\n",
     "            frame_list.append(k)\n",
@@ -519,6 +219,26 @@
     "    print('end for the No. %d big file'%(i))\n",
     "                \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0, 24]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frame_bounds"
    ]
   }
  ],
